--- a/practice/kakao_api/front/index.html
+++ b/practice/kakao_api/front/index.html
@@ -6,12 +6,13 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
   <body>
-    <form legend="login">
+    <form id="loginForm">
       <input type="text" placeholder="id" name="id" />
       <input type="password" placeholder="password" name="password" />
       <button>login</button>
     </form>
     <button><a href="/regist">regist</a></button>
+
+    <script src="./index.js"></script>
   </body>
-  <script src="./index.js"></script>
 </html>
