--- a/practice/kakao_api/front/regist/index.html
+++ b/practice/kakao_api/front/regist/index.html
@@ -4,6 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey="
+    ></script>
   </head>
   <body>
     <form id="registForm">
@@ -12,7 +16,20 @@
       <button>regist</button>
     </form>
     <button><a>regist</a></button>
+
     <button><a href="/">뒤로 가기</a></button>
+
+    <div id="map" style="width: 500px; height: 400px"></div>
+
+    <script>
+      var container = document.getElementById("map");
+      var options = {
+        center: new kakao.maps.LatLng(33.450701, 126.570667),
+        level: 3,
+      };
+
+      var map = new kakao.maps.Map(container, options);
+    </script>
+    <script src="./index.js"></script>
   </body>
-  <script src="./index.js"></script>
 </html>
